@@ -21,13 +21,7 @@
 <?php
 include('include/views/js/administration.general.triggerDisplayingOptions.js.php');
 
-
 $triggerDOFormList = new CFormList('scriptsTab');
-
-$severityForm = new CForm();
-$severityForm->setName('triggerDisplayingOptions');
-$severityForm->addVar('form', $data['form']);
-$severityForm->addVar('form_refresh', $data['form_refresh'] + 1);
 
 $headerDiv = new CDiv(_('Colour'), 'inlineblock trigger_displaying_form_col');
 $headerDiv->addStyle('margin-left: 2px;');
@@ -38,12 +32,12 @@ $triggerDOFormList->addRow(
 	_('Unacknowledged PROBLEM events'),
 	array(
 		new CDiv(
-			new CColor('problem_unack_color', $data['problem_unack_color']),
+			new CColor('problem_unack_color', $this->data['problem_unack_color']),
 			'inlineblock trigger_displaying_form_col'
 		),
 		new CCheckBox(
 			'problem_unack_style',
-			$data['problem_unack_style'] == 1,
+			$this->data['problem_unack_style'] == 1,
 			null,
 			1
 		)
@@ -55,12 +49,12 @@ $triggerDOFormList->addRow(
 	_('Acknowledged PROBLEM events'),
 	array(
 		new CDiv(
-			new CColor('problem_ack_color', $data['problem_ack_color']),
+			new CColor('problem_ack_color', $this->data['problem_ack_color']),
 			'inlineblock trigger_displaying_form_col'
 		),
 		new CCheckBox(
 			'problem_ack_style',
-			$data['problem_ack_style'] == 1,
+			$this->data['problem_ack_style'] == 1,
 			null,
 			1
 		)
@@ -72,12 +66,12 @@ $triggerDOFormList->addRow(
 	_('Unacknowledged OK events'),
 	array(
 		new CDiv(
-			new CColor('ok_unack_color', $data['ok_unack_color']),
+			new CColor('ok_unack_color', $this->data['ok_unack_color']),
 			'inlineblock trigger_displaying_form_col'
 		),
 		new CCheckBox(
 			'ok_unack_style',
-			$data['ok_unack_style'] == 1,
+			$this->data['ok_unack_style'] == 1,
 			null,
 			1
 		)
@@ -89,42 +83,42 @@ $triggerDOFormList->addRow(
 	_('Acknowledged OK events'),
 	array(
 		new CDiv(
-			new CColor('ok_ack_color', $data['ok_ack_color']),
+			new CColor('ok_ack_color', $this->data['ok_ack_color']),
 			'inlineblock trigger_displaying_form_col'
 		),
 		new CCheckBox(
 			'ok_ack_style',
-			$data['ok_ack_style'] == 1,
+			$this->data['ok_ack_style'] == 1,
 			null,
 			1
 		)
 	)
 );
 
-
 // some air between the sections
 $triggerDOFormList->addRow(BR());
 
 // Display OK triggers
-$okPeriodTextBox = new CTextBox('ok_period', $data['ok_period']);
+$okPeriodTextBox = new CTextBox('ok_period', $this->data['ok_period']);
 $okPeriodTextBox->addStyle('width: 4em;');
 $okPeriodTextBox->setAttribute('maxlength', '6');
 $triggerDOFormList->addRow(_('Display OK triggers for'), array($okPeriodTextBox, SPACE, _('seconds')));
 
 // Triggers blink on status change
-$okPeriodTextBox = new CTextBox('blink_period', $data['blink_period']);
+$okPeriodTextBox = new CTextBox('blink_period', $this->data['blink_period']);
 $okPeriodTextBox->addStyle('width: 4em;');
 $okPeriodTextBox->setAttribute('maxlength', '6');
 $triggerDOFormList->addRow(_('On status change triggers blink for'), array($okPeriodTextBox, SPACE, _('seconds')));
 
 $severityView = new CTabView();
 $severityView->addTab('triggerdo', _('Trigger displaying options'), $triggerDOFormList);
+
+$severityForm = new CForm();
+$severityForm->setName('triggerDisplayingOptions');
+$severityForm->addVar('form', $this->data['form']);
+$severityForm->addVar('form_refresh', $this->data['form_refresh'] + 1);
 $severityForm->addItem($severityView);
-
-// Footer
-$footer = makeFormFooter(array(new CSubmit('save', _('Save'))),	new CButton('resetDefaults', _('Reset defaults')));
-$severityForm->addItem($footer);
-
+$severityForm->addItem(makeFormFooter(array(new CSubmit('save', _('Save'))), new CButton('resetDefaults', _('Reset defaults'))));
 
 return $severityForm;
 ?>
